changed some stuff ig

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -25,7 +25,7 @@ source = ~/.config/hypr/modules/monitors.conf
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nemo
 $menu = wofi --show drun
 
 
