--- a/modules/autostart.conf
+++ b/modules/autostart.conf
@@ -1,4 +1,4 @@
-exec-once = waybar & swaync & hypridle & hyprpapr
+exec-once = waybar & swaync & hypridle & hyprpaper
 exec-once = gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 exec-once = dbus-update-activation-environment --systemd --all
 exec-once = nm-applet
