--- a/hyprland.conf
+++ b/hyprland.conf
@@ -27,7 +27,7 @@ source = ~/.config/hypr/modules/monitors.conf
 $terminal = kitty
 $fileManager = nemo
 $menu = wofi --show drun
-
+$browser = zen-browser
 
 #################
 ### AUTOSTART ###
