--- a/modules/binds.conf
+++ b/modules/binds.conf
@@ -1,26 +1,27 @@
 
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = SUPER # Sets "Windows" key as main modifier0
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+#bind = $mainMod, P, pseudo, # dwindle
+#bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, R, exec, ~/.config/hypr/scripts/reloadWaybar.sh
+bind = $mainMod, P, exec, $browser
 
 bind = $mainMod, S, exec, hyprshot -m window
 bind = $mainMode SHIFT, S, exec, hyprshot -m region
 bind = $mainMode SHIFT, L, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
