--- a/modules/autostart.conf
+++ b/modules/autostart.conf
@@ -4,3 +4,7 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = nm-applet
 exec-once = ~/.config/hypr/scripts/power_switch.sh
 exec-once = ~/.config/hypr/scripts/folderStuff.sh
+
+# applications I want started
+exec-once = zen-browser
+exec-once = $terminal
