Added some bt stuff

--- a/hypridle.conf
+++ b/hypridle.conf
@@ -11,20 +11,20 @@ listener {
 	on-resume = brightnessctl -r
 }
 
-listener {
-	timeout = 240
-	on-timeout = loginctl lock-session
-}
+#istener {
+#	timeout = 240
+#	on-timeout = loginctl lock-session
+#}
 
 listener {
 	ignore_inhibit = true
-	timeout = 300                                                    
-	on-timeout = hyprctl dispatch dpms off                            
-	on-resume = hyprctl dispatch dpms on && brightnessctl -r          
+	timeout = 600
+	on-timeout = hyprctl dispatch dpms off
+  on-resume = hyprctl dispatch dpms on && brightnessctl -r
 }
 
 listener {
 	ignore_inhibit=true
-	timeout = 360
+	timeout = 1200
 	on-timeout = systemctl suspend
 }
