--- a/hyprland.conf
+++ b/hyprland.conf
@@ -51,7 +51,8 @@ source = ~/.config/hypr/modules/autostart.conf
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card2
-
+env = QT_QPA_PLATFORMTHEME,hyprqt6engine
+env = GNOME_SCHEMA, org.gnome.desktop.interface
 
 ################
 #### CURSOR ####
