--- a/modules/autostart.conf
+++ b/modules/autostart.conf
@@ -2,8 +2,10 @@ exec-once = waybar & swaync & hypridle & hyprpaper
 exec-once = gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 exec-once = dbus-update-activation-environment --systemd --all
 exec-once = nm-applet
+exec-once = blueman-tray
 exec-once = ~/.config/hypr/scripts/power_switch.sh
 exec-once = ~/.config/hypr/scripts/folderStuff.sh
+exec = gsettings set org.gnomore.desktop.interface font-name 'inter 10'
 
 # applications I want started
 exec-once = zen-browser
