testing out some changes on hypridle

--- a/hypridle.conf
+++ b/hypridle.conf
@@ -6,25 +6,25 @@ general {
 
 
 listener {
-	timeout = 180
+	timeout = 240
 	on-timeout = brightnessctl -s set 1%
 	on-resume = brightnessctl -r
 }
 
-#istener {
-#	timeout = 240
-#	on-timeout = loginctl lock-session
+istener {
+	timeout = 300
+	on-timeout = loginctl lock-session
+}
+
+#listener {
+#	ignore_inhibit = true
+#	timeout = 600
+#	on-timeout = hyprctl dispatch dpms off
+#  on-resume = hyprctl dispatch dpms on && brightnessctl -r
 #}
 
 listener {
-	ignore_inhibit = true
-	timeout = 600
-	on-timeout = hyprctl dispatch dpms off
-  on-resume = hyprctl dispatch dpms on && brightnessctl -r
-}
-
-listener {
 	ignore_inhibit=true
-	timeout = 1200
+	timeout = 600
 	on-timeout = systemctl suspend
 }
